@@ -1,5 +1,8 @@
 $Id$
 
+2007-02-05 Edwin Velds <e.velds@gmail.com>
+	* Revised the disasm viewer navigation and display code.
+
 2007-01-14 Edwin Velds <e.velds@gmail.com>
 	* Added a menu for hiding/showing controls.
 	* Added storing and restoring of window layout in the settings.
